Restructure project for AWS EB

--- a/Titanium_Site/.gitignore
+++ b/Titanium_Site/.gitignore
@@ -21,3 +21,8 @@ env/
 # OS files
 .DS_Store
 Thumbs.db
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
