--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,65 @@
+ansicon==1.89.0
+awscli==1.43.0
+awsebcli==3.25.3
+bcrypt==5.0.0
+blessed==1.25.0
 blinker==1.9.0
+botocore==1.41.0
+cement==2.10.14
+certifi==2025.11.12
+cffi==2.0.0
+charset-normalizer==3.4.4
 click==8.3.0
+clr_loader==0.2.8
 colorama==0.4.6
+cryptography==46.0.3
+decorator==5.2.1
+Deprecated==1.3.1
 dnspython==2.8.0
+docutils==0.19
 email-validator==2.3.0
+fabric==3.2.2
 Flask==3.1.2
 Flask-Login==0.6.3
+Flask-SQLAlchemy==3.1.1
+flask-talisman==1.1.0
 Flask-WTF==1.2.2
+git-filter-repo==2.47.0
+greenlet==3.2.4
 idna==3.11
+invoke==2.2.1
 itsdangerous==2.2.0
 Jinja2==3.1.6
+jinxed==1.3.0
+jmespath==1.0.1
 MarkupSafe==3.0.3
+numpy==2.3.5
+packaging==24.2
+pandas==2.3.3
+paramiko==4.0.0
+pathspec==0.12.1
+pyasn1==0.6.1
+pycparser==2.23
+PyNaCl==1.6.1
+pypiwin32==223
+python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
+pythonnet==3.0.5
+pytz==2025.2
+pywin32==311
+PyYAML==6.0.3
+requests==2.32.5
+rsa==4.7.2
+s3transfer==0.14.0
+semantic-version==2.10.0
+setuptools==80.9.0
+six==1.17.0
+SQLAlchemy==2.0.44
+termcolor==2.5.0
+typing_extensions==4.15.0
+tzdata==2025.2
+urllib3==1.26.20
+wcwidth==0.2.14
 Werkzeug==3.1.3
+wrapt==2.0.1
 WTForms==3.2.1
-flask_sqlalchemy
