--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -1,12 +1,16 @@
 branch-defaults:
   main:
-    environment: Titanium-Site-env-2
+    environment: Titanium-Site-env-3
     group_suffix: null
+environment-defaults:
+  Titanium-Site-env-2:
+    branch: null
+    repository: null
 global:
-  application_name: Titanium-Site
+  application_name: Titanium_Site
   branch: null
-  default_ec2_keyname: null
-  default_platform: Python 3.13 running on 64bit Amazon Linux 2023
+  default_ec2_keyname: aws-eb
+  default_platform: Python 3.11
   default_region: us-west-1
   include_git_submodules: true
   instance_profile: null
