remove pywin32 from requirements

--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -6,11 +6,14 @@ environment-defaults:
   Titanium-Site-env-2:
     branch: null
     repository: null
+  Titanium-Site-env-3:
+    branch: null
+    repository: null
 global:
-  application_name: Titanium_Site
+  application_name: Titanium-Site-env
   branch: null
   default_ec2_keyname: aws-eb
-  default_platform: Python 3.11
+  default_platform: Python 3.11 running on 64bit Amazon Linux 2023
   default_region: us-west-1
   include_git_submodules: true
   instance_profile: null
